--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-<iframe src="blog-guo.vfl.asia" width="3000" height="3000" frameborder="0"></iframe>
+
+
+<!-- saved from url=(0023)https://cbrqsy.rth1.me/ -->
+<html lang="zh-CN" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>陈伯睿起始页</title>
+    <link defer="" href="https://user-assets.sxlcdn.com/images/854588/FtbNx9HoVrBRBKDetj7JkKT8G-NP.jpg?imageMogr2/strip/auto-orient/thumbnail/64x64>/interlace/1/format/jpeg" rel="shortcut icon" type="image/x-icon"><meta content="CDBNR | 上线了sxl.cn" property="og:title">
+    <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
+  </head>
+  <body>
+    <div class="backgroundBox1">
+      <div class="backgroundBox2">
+        <div id="backgroundFormStyle">
+          <form action="https://www.bing.com/" method="get" target="_parent" id="searchForm">
+            <input type="hidden" name="search" value="？">
+            <input type="text" name="q" placeholder="别看了，这玩意儿是搜索框。" id="searchInput" autocomplete="off">
+            <input type="submit" value="" id="confirmInput">
+          </form>
+        </div>
+        <div class="iconBackBoxAll">
+          <a class="iconBackBox" href="https://www.bilibili.com/">
+            <img src="bilibili.png" alt="">
+            <div>
+              <p>bilibili</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://cdbnr.github.io/me">
+            <img src="FtbNx9HoVrBRBKDetj7JkKT8G-NP.png" alt="" data:image="">
+            <div>
+              <p>陈伯睿</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://mail.google.com/mail/u/0/#inbox">
+            <img src="5abe06551dc8160fb50857e9.png" alt="">
+            <div>
+              <p>mail</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://www.youtube.com/">
+            <img src="youtube.png" alt="">
+            <div>
+              <p>youtube</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://www.aliyundrive.com/drive">
+            <img src="aliyundrive.png" alt="">
+            <div>
+              <p>阿里云盘</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://www.google.com/">
+            <img src="google.png" alt="">
+            <div>
+              <p>google</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://cn.bing.com/">
+            <img src="R.13af9c6dd7353e20b628e12d5a6324a5" alt="">
+            <div>
+              <p>bing</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://host.retiehe.com/">
+            <img src="host-icon-512.png" alt="">
+            <div>
+              <p>热铁盒</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+</body></html>
