--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="iconBackBoxAll">
           <a class="iconBackBox" href="https://www.bilibili.com/">
-            <img src="bilibili.png" alt="">
+            <img src="https://zgmz.github.io/bilibili.png" alt="">
             <div>
               <p>bilibili</p>
             </div>
