--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <title>Blog-Guo丨内置起始页</title>
     <link defer="" href="https://user-assets.sxlcdn.com/images/854588/FtbNx9HoVrBRBKDetj7JkKT8G-NP.jpg?imageMogr2/strip/auto-orient/thumbnail/64x64>/interlace/1/format/jpeg" rel="shortcut icon" type="image/x-icon"><meta content="CDBNR | 上线了sxl.cn" property="og:title">
-    <link rel="stylesheet" href="https://zgmz.github.io/beginPageCss1.css" type="text/css">
+    <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
     <div class="backgroundBox1">
