--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
           </a>
           <a class="iconBackBox" href="http://blog-guo.vfl.asia">
-            <img src="blog。jpg" alt="" data:image="">
+            <img src="blog.jpg" alt="" data:image="">
             <div>
               <p>Blog-Guo</p>
             </div>
