--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-<!-- saved from url=(0023)https://cbrqsy.rth1.me/ -->
 <html lang="zh-CN" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Blog-Guo丨内置起始页</title>
@@ -8,6 +5,7 @@
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
+      <h>Blog-Guo丨内置起始页</h1>
     <div class="backgroundBox1">
       <div class="backgroundBox2">
         <div id="backgroundFormStyle">
