--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
             <input type="text" name="q" placeholder="搜索..." id="searchInput" autocomplete="off">
             <input type="submit" value="" id="confirmInput">
           </form>
-             </div>
-        <div class="iconBackBoxAll">
-          <a class="iconBackBox" href="http://blog-guo.vfl.asia">
-            <img src="blog2.png" alt="">
-            <div>
-              <p>bilibili</p>
             </div>
           </a>
           <a class="iconBackBox" href="https://cdbnr.github.io/me">
-            <img src="FtbNx9HoVrBRBKDetj7JkKT8G-NP.png" alt="" data:image="">
+            <img src="blog.jpg" alt="" data:image="">
             <div>
-              <p>陈伯睿</p>
+              <p>Blog-Guo</p>
             </div>
     </div>
 
