--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </form>
             </div>
           </a>
-          <a class="iconBackBox" href="https://cdbnr.github.io/me">
+          <a class="iconBackBox" href="http://blog-guo.vfl.asia/">
             <img src="blog.jpg" alt="" data:image="">
             <div>
               <p>Blog-Guo</p>
