--- a/index.html
+++ b/index.html
@@ -14,13 +14,58 @@
             <input type="text" name="q" placeholder="搜索..." id="searchInput" autocomplete="off">
             <input type="submit" value="" id="confirmInput">
           </form>
+          </div>
+        <div class="iconBackBoxAll">
+          <a class="iconBackBox" href="https://www.bilibili.com/">
+            <img src="bilibili.png" alt="">
+            <div>
+              <p>bilibili</p>
             </div>
           </a>
-          <a class="iconBackBox" href="http://blog-guo.vfl.asia/">
-            <img src="blog.jpg" alt="" data:image="">
+          <a class="iconBackBox" href="https://cdbnr.github.io/me">
+            <img src="FtbNx9HoVrBRBKDetj7JkKT8G-NP.png" alt="" data:image="">
             <div>
-              <p>Blog-Guo</p>
+              <p>陈伯睿</p>
             </div>
+          </a>
+          <a class="iconBackBox" href="https://mail.google.com/mail/u/0/#inbox">
+            <img src="5abe06551dc8160fb50857e9.png" alt="">
+            <div>
+              <p>mail</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://www.youtube.com/">
+            <img src="youtube.png" alt="">
+            <div>
+              <p>youtube</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://www.aliyundrive.com/drive">
+            <img src="aliyundrive.png" alt="">
+            <div>
+              <p>阿里云盘</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://www.google.com/">
+            <img src="google.png" alt="">
+            <div>
+              <p>google</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://cn.bing.com/">
+            <img src="R.13af9c6dd7353e20b628e12d5a6324a5" alt="">
+            <div>
+              <p>bing</p>
+            </div>
+          </a>
+          <a class="iconBackBox" href="https://host.retiehe.com/">
+            <img src="host-icon-512.png" alt="">
+            <div>
+              <p>热铁盒</p>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
 
 </body></html>
