--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
+      <h1 align="center">Blog-Guo丨内置起始页</h1>
       <h>Blog-Guo丨内置起始页</h1>
     <div class="backgroundBox1">
       <div class="backgroundBox2">
