--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="zh-CN" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+    <meta name="Blog-Guo丨Guo的博客&起始页">
     <title>Blog-Guo丨内置起始页</title>
     <link defer="" href="blog.jpg" rel="shortcut icon" type="image/x-icon"><meta content="CDBNR | 上线了sxl.cn" property="og:title">
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
