--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
         <div class="iconBackBoxAll">
           <a class="iconBackBox" href="http://blog-guo.vfl.asia/">
-            <img src="blog3.jpg" alt="">
+            <img src="blog3.png" alt="">
             <div>
               <p>Blog-Guo</p>
             </div>
