--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang="zh-CN" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="Blog-Guo丨Guo的博客&起始页">
     <meta name="msvalidate.01" content="F32899817127C67931842D513B3EDE14" />
@@ -17,10 +18,17 @@
           </form>
           </div>
         <div class="iconBackBoxAll">
-          <a class="iconBackBox" href="http://blog-guo.vfl.asia/">
+          <a class="iconBackBox" href="http://1.blogguo.top">
             <img src="blog3.png" alt="">
             <div>
               <p>Blog-Guo</p>
+            </div>
+          </a>
+			<div class="iconBackBoxAll">
+          <a class="iconBackBox" href="http://875n8f1350.vicp.fun:43480">
+            <img src="https://www.synology.cn/img/dsm/overview/file.webp" alt="">
+            <div>
+              <p>NASGUO</p>
             </div>
           </a>
           
