--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
+	  <style>
+
+h1 {
+
+text-align: center;
+
+}
+	  <h1>Solo<h1/>
     <div class="backgroundBox1">
       <div class="backgroundBox2">
         <div id="backgroundFormStyle">
