--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<!-- saved from url=(0023)https://cbrqsy.rth1.me/ -->
+
 <html lang="zh-CN" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Solo丨独奏起始页丨死灰复燃，再度归来</title>
@@ -8,13 +8,7 @@
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
-	  <style>
-
-h1 {
-
-text-align: center;
-
-}
+	  
 	  <h1>Solo<h1/>
     <div class="backgroundBox1">
       <div class="backgroundBox2">
@@ -50,5 +44,5 @@ text-align: center;
         </div>
       </div>
     </div>
-
+站长留言：Solo仅为我自己设计，符合我的使用习惯
 </body></html>
