--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 	  
-	  <h1>Solo<h1/>
+	  <h1 style='text-align:center;'>Solo</h1>
     <div class="backgroundBox1">
       <div class="backgroundBox2">
         <div id="backgroundFormStyle">
@@ -44,5 +44,5 @@
         </div>
       </div>
     </div>
-站长留言：Solo仅为我自己设计，符合我的使用习惯
+站长留言：Solo是我在两年前制作的一个半成品项目，如今被重新启用并成为了我个人的起始页，使用习惯可能与大多数人不符，后续可能增加其扩展性以面向大部分用户群体
 </body></html>
