--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
-	  <br><br><br>
+	  <br><br><br><br><br>
 	  <h1 style='text-align:center;'>Solo</h1>
     <div class="backgroundBox1">
       <div class="backgroundBox2">
@@ -44,5 +44,5 @@
         </div>
       </div>
     </div>
-<br><br><br><br><br><br><br><h1 style='text-align:center;'>站长留言：Solo是我在两年前制作的一个半成品项目，如今被重新启用并成为了我个人的起始页，使用习惯可能与大多数人不符，后续可能增加其扩展性以面向大部分用户群体</h1>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h3 style='text-align:center;'>站长留言：Solo是我在两年前制作的一个半成品项目，如今被重新启用并成为了我个人的起始页，使用习惯可能与大多数人不符，后续可能增加其扩展性以面向大部分用户群体</h3>
 </body></html>
