--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@
         </div>
       </div>
     </div>
-<br><br><br><br><br><br><br><h3 style='text-align:center;'>涅槃重生，再度归来<br>站长留言：Solo是我在两年前制作的一个半成品项目，<br>如今被重新启用并成为了播客内置起始页</h3>
+<br><br><br><br><br><br><br><br><br><h2 style='text-align:center;'>涅槃重生，再度归来<br>站长留言：Solo是我在两年前制作的一个半成品项目，<br>如今被重新启用并成为了播客内置起始页</h2>
 </body></html>
