--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="zh-CN" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Solo丨独奏起始页丨涅槃重生，再度归来</title>
-    <link rel=" Shortcut Icon" href="logo.ico" />
+    <<link defer="" href="blog3.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
   </head>
   <body>
