--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
               <p>NASGUO</p>
             </div>
           </a>
+		<a class="iconBackBox" href="http://875n8f1350.vicp.fun:43480">
+            <img src="wx.png" alt="">
+            <div>
+              <p>微信文件传输助手</p>
+            </div>
+          </a>
 			   <a class="iconBackBox" href="https://www.bilibili.com/">
             <img src="https://zgmz.github.io/bilibili.png" alt="">
             <div>
