--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<a class="iconBackBox" href="http://875n8f1350.vicp.fun:43480">
             <img src="wx.png" alt="">
             <div>
-              <p>微信文件传输助手</p>
+              <p>文件传输助手</p>
             </div>
           </a>
 			   <a class="iconBackBox" href="https://www.bilibili.com/">
