--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
           </a>
 		<a class="iconBackBox" href="http://875n8f1350.vicp.fun:43480">
-            <img src="wx.png" alt="">
+            <img src="wx.jpg" alt="">
             <div>
               <p>文件传输助手</p>
             </div>
