--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <p>NASGUO</p>
             </div>
           </a>
-		<a class="iconBackBox" href="http://875n8f1350.vicp.fun:43480">
+		<a class="iconBackBox" href="https://szfilehelper.weixin.qq.com/">
             <img src="wx.jpg" alt="">
             <div>
               <p>文件传输助手</p>
