--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<a class="iconBackBox" href="https://szfilehelper.weixin.qq.com/">
             <img src="wx.jpg" alt="">
             <div>
-              <p>文件传输助手</p>
+              <p>微信文传</p>
             </div>
           </a>
 			   <a class="iconBackBox" href="https://www.bilibili.com/">
