--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@
         </div>
       </div>
     </div>
-<h4 style='text-align:center;'>“涅槃重生，再度归来”<br>Solo是我在两年前制作的一个半成品项目<br>如今被重新启用并成为了博客内置起始页</h4>
+<h4 style='text-align:center;'>“涅槃重生，再度归来”<br>Solo是我在两年前制作的一个半成品项目,如今被重新启用并成为了博客内置起始页</h4>
 </body></html>
